5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1715_3038.log
== TEST (2019-05-02 17:26:18) 
-- CODE:
from math import *
x = float(input())abs()

if(x<=1 or x>=1):
	resultado = (x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(resultado)
-- ERROR:
File "XXXX", line 2
    x = float(input())abs()
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:26:31) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(resultado)
-- OUTPUT:
0.995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:26:53) 
-- CODE:
from math import *
x = abs(float(input()))

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(resultado)
-- OUTPUT:
0.995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:27:10) 
-- CODE:
from math import *
x = abs(float(input()))

if(x<=1 or x>=1):
	resultado = (x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = (x)
else:
	resultado = 0
print(resultado)
-- OUTPUT:
0.995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:27:28) 
-- CODE:
from math import *
x = abs(float(input()))

if(x<=1 or x>=1):
	resultado = (x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = (x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:27:42) 
-- CODE:
from math import *
x = abs(float(input()))

if(x<=1 or x>=1):
	resultado = (x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = (x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:29:18) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:29:24) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- EXECUTION TIME:
0.191047
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0.99
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.01
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
128.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:29:32) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (o<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:13) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and (not(-1<x)) or (not(o<x) and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- ERROR:
File "XXXX", line 6
    elif((x<0 and (not(-1<x)) or (not(o<x) and x<1)):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:25) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and (not(-1<x)) or (not(0<x) and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- ERROR:
File "XXXX", line 6
    elif((x<0 and (not(-1<x)) or (not(0<x) and x<1)):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:41) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:46:14) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = (x**1/2)abs()
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = (x)abs()
else:
	resultado = 0
print(round(resultado,2))
-- ERROR:
File "XXXX", line 5
    resultado = (x**1/2)abs()
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:46:40) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = (abs(x)**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:46:48) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = (abs(x)**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- EXECUTION TIME:
0.167822
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0.99
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.01
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
128.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:50:05) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = (abs(x)**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:50:29) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = (abs(x)**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:50:51) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- EXECUTION TIME:
0.208259
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
0.99
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.01
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
128.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:50:52) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:51:25) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(x**1/2)
#elif((x<0 and -1<x) or (0<x and x<1)):
#	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
0.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:52:01) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = abs(sqrt(x))
#elif((x<0 and -1<x) or (0<x and x<1)):
#	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    resultado = abs(sqrt(x))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:52:44) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = sqrt(abs(x))
#elif((x<0 and -1<x) or (0<x and x<1)):
#	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:52:57) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = sqrt(abs(x))
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:53:07) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = sqrt(abs(x))
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:53:31) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = sqrt(abs(x))
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- EXECUTION TIME:
0.1504
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
1.41
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.1
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
16.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:53:31) 
-- CODE:
from math import *
x = float(input())

if(x<=1 or x>=1):
	resultado = sqrt(abs(x))
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:54:20) 
-- CODE:
from math import *
x = float(input())

if(x<=-1 or x>=1):
	resultado = sqrt(abs(x))
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:54:27) 
-- CODE:
from math import *
x = float(input())

if(x<=-1 or x>=1):
	resultado = sqrt(abs(x))
elif((x<0 and -1<x) or (0<x and x<1)):
	resultado = abs(x)
else:
	resultado = 0
print(round(resultado,2))
-- EXECUTION TIME:
0.143411
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
1.41
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.01
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
16.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
